--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niggers</title>
+    <title>Franek</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>cześć</p><p>jdsjkkfjs</p>
+    <p id="update">cześć</p><p>jdsjkkfjs</p>
 </body>
 </html>
